--- a/pom.xml
+++ b/pom.xml
@@ -8,7 +8,9 @@
     <artifactId>design-pattern</artifactId>
     <packaging>pom</packaging>
     <version>1.0-SNAPSHOT</version>
-
+    <modules>
+        <module>iterator-pattern</module>
+    </modules>
 
     <dependencies>
         <dependency>
