--- a/pom.xml
+++ b/pom.xml
@@ -11,6 +11,7 @@
     <modules>
         <module>iterator-pattern</module>
         <module>adapter-pattern</module>
+        <module>template-pattern</module>
     </modules>
 
     <dependencies>
