--- a/pom.xml
+++ b/pom.xml
@@ -12,6 +12,7 @@
         <module>iterator-pattern</module>
         <module>adapter-pattern</module>
         <module>template-pattern</module>
+        <module>factory-pattern</module>
     </modules>
 
     <dependencies>
